syntax = "proto3";

option go_package = "proto/keypoints";

service KeyPointsService {
  rpc GetById(KeyPointGetByIdRequest) returns (KeyPointGetByIdResponse) {}
  rpc GetAll(KeyPointGetAllRequest) returns (KeyPointGetAllResponse) {}
  rpc GetByTourId(KeyPointGetByTourIdRequest) returns (KeyPointGetByTourIdResponse) {}
  rpc Create(KeyPointCreateRequest) returns (KeyPointCreateResponse) {}
  rpc Update(KeyPointUpdateRequest) returns (KeyPointUpdateResponse) {}
  rpc Delete(KeyPointDeleteRequest) returns (KeyPointDeleteResponse) {}
}

message KeyPoint {
  int64 ID = 1;
  int64 TourId = 2;
  string Name = 3;
  string Description = 4;
  double Longitude = 5;
  double Latitude = 6;
  string LocationAddress = 7;
  string ImagePath = 8;
  int64 Order = 9;
}

message KeyPointGetByIdRequest {
  string ID = 1;
}

message KeyPointGetByIdResponse {
  KeyPoint keyPoint = 1;
}

message KeyPointGetAllRequest {
}

message KeyPointGetAllResponse {
  repeated KeyPoint keyPoints = 1;
}

message KeyPointGetByTourIdRequest {
  string TourId = 1;
}

message KeyPointGetByTourIdResponse {
  repeated KeyPoint keyPoints = 1;
}

message KeyPointCreateRequest {
  KeyPoint keyPoint = 1;
}

message KeyPointCreateResponse {
}

message KeyPointUpdateRequest {
  KeyPoint keyPoint = 1;
}

message KeyPointUpdateResponse {
}

message KeyPointDeleteRequest {
  string ID = 1;
}

message KeyPointDeleteResponse {
}
